# sms-spam-classifier

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: clean_spam.csv  download.py
models/: coefficients.pkl  ensemble.pkl  ensemble_meta.json  feature_names.pkl  linear_svc.pkl  linear_svc_meta.json  logistic_reg.pkl  logistic_reg_meta.json  metadata_extractor.pkl  model.pkl  naive_bayes.pkl  naive_bayes_meta.json  threshold.json  vectorizer.pkl
notebooks/: Untitled.ipynb
src/: features.py  predict.py  preprocess.py  train.py
